--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "replicate": "^0.12.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
